--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <model-viewer
         id="model"
         src="RobotExpressive.glb"
-             alt="dragon"
-             auto-rotate
+             alt="robot"
              camera-controls
              skybox-image="stadium.jpg"
              animation-name="Running"
