--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>Robo run</title>
 
     <script
     type="module"
@@ -21,6 +21,7 @@
              skybox-image="stadium.jpg"
              animation-name="Running"
              autoplay
+             ar
            ></model-viewer>
     </div>
     <div class="btn-container">
